[tool.poetry]
name = "app"
version = "0.1.0"
description = "Crackmode"
authors = ["Morgan <ngetichmorgan6@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "^0.115.12"
uvicorn = { extras = ["standard"], version = "^0.34.3" }
pydantic = "^2.11.7"
SQLAlchemy = "^2.0.41"
psycopg2-binary = "^2.9.10"
alembic = "^1.16.2"
python-dotenv = "^1.1.0"
celery = "^5.5.3"
redis = "^6.2.0"
sqlmodel = "^0.0.24"
pydantic-settings = "^2.9.1"
python-jose = { extras = ["cryptography"], version = "^3.5.0" }
jwt = "^1.3.1"
passlib = "^1.7.4"
python-multipart = "^0.0.20"
requests = "^2.32.4"
pytest = "^8.4.1"
httpx = "^0.28.1"
starlette = "<0.47.0"
tenacity = "^9.1.2"
Faker = "^37.5.3"
openai = "^1.98.0"
anthropic = "^0.60.0"
replicate = "^1.0.7"
groq = "^0.31.0"
pillow = "^11.3.0"
imgkit = "^1.2.3"
bcrypt = "^5.0.0"

[tool.poetry.dev-dependencies]
black = "^25.1.0"
alembic = "^1.16.2"
pytest = "^8.4.1"
psycopg2-binary = "^2.9.10"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
